src/test/ui/span/issue-26656.stderr
error[E0597]: `ticking` does not live long enough
  --> $DIR/issue-26656.rs:40:36
   |
LL |     zook.button = B::BigRedButton(&ticking);
   |                                    ^^^^^^^ borrowed value does not live long enough
LL | }
   | - `ticking` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
